--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,12 +10,14 @@ updates:
     open-pull-requests-limit: 5
     commit-message:
       prefix: "⬆ | upgrade: deps -"
-    #ignore:
-    #  - dependency-name: "some-package-you-want-to-ignore"
-    #    versions: ["1.x.x"]  # optional
+
   - package-ecosystem: "cargo"
     directory: "/project"
     schedule:
       interval: "weekly"
-    # Enable security updates specifically
-    security-updates: true
+    allow:
+      - dependency-type: "direct"
+      - dependency-type: "indirect"
+    open-pull-requests-limit: 5
+    commit-message:
+      prefix: "⬆ | upgrade: deps -"
